# cuda_kernel_processing

./: CMakeLists.txt  cuda_1024_results.json  cuda_128_results.json  cuda_256_results.json  cuda_32_results.json  cuda_512_results.json  cuda_64_results.json  cuda_non_separable_kernel_results.json  cuda_separable_kernel_results.json  cuda_sequential_results.json  main.cpp  main.cu  sequential_results.json
